sgd/reproduction/playground/objects/SVMXC__Activity_Master__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Activity Master definition is used to define the activity related to activity performed.</description>
    <fields>
        <fullName>SMAX_PS_Activity_Item_Code__c</fullName>
        <label>作業品目コード</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>70010 客先訪問修理</fullName>
                </value>
                <value>
                    <fullName>70011 社内修理</fullName>
                </value>
                <value>
                    <fullName>70014 点検</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Activity_Item_Group__c</fullName>
        <label>品目グループ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>作業費</fullName>
                </value>
                <value>
                    <fullName>検査機器</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Item_Name__c</fullName>
        <label>見積品目名</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <label>製品区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Type__c</fullName>
        <label>製品区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ME大型製品</fullName>
                </value>
                <value>
                    <fullName>エンジン（旧価格）</fullName>
                </value>
                <value>
                    <fullName>エンジン（新価格）</fullName>
                </value>
                <value>
                    <fullName>エンジン（DTS）</fullName>
                </value>
                <value>
                    <fullName>工計製品</fullName>
                </value>
                <value>
                    <fullName>工計製品（無償）</fullName>
                </value>
                <value>
                    <fullName>科学・半導体・医用</fullName>
                </value>
                <value>
                    <fullName>科学・半導体（HFD用）</fullName>
                </value>
                <value>
                    <fullName>科学・半導体（1年以内）</fullName>
                </value>
                <value>
                    <fullName>科学・半導体（1年以上）</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <label>対象区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Service_Target</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Activity_Type__c</fullName>
        <description>Required. Activity that are performed  against work order/case.</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3000</fullName>
                    <label>作業費</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>部品明細</label>
                </value>
                <value>
                    <fullName>5000</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Activity Master</label>
    <listViews>
        <fullName>SVMXC__All_Activities</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Activity_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Activities</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>